--- a/pbm-app/client/index.html
+++ b/pbm-app/client/index.html
@@ -1,6 +1,8 @@
 <head>
-    <title>test app</title>
+    <base href="/">
+    <title>Pass By Message</title>
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.min.js"></script>
 </head>
