--- a/pbm-app/imports/ui/body.html
+++ b/pbm-app/imports/ui/body.html
@@ -5,14 +5,11 @@
       </div>
   </nav>
   <div class="container content">
+    <div class="row">
       <div class="col-lg-12">
-      <form class="new-task">
-        <div class="form-group row">
-          <input type="text" name="text" class="form-control col-10" placeholder="New task" />
-          <button class="btn btn-primary col-2" type="submit">Add</button>
-          </div>
-        </form>
-    </div>
+          {{ > newtask }}
+        </div>
+      </div>
     <div class="row">
       {{#each tasks}} {{> task}} {{/each}}
       </div>
