--- a/pbm-app/imports/ui/task.html
+++ b/pbm-app/imports/ui/task.html
@@ -1,7 +1,7 @@
 <template name="task">
   <div class="col-sm-12 col-md-6 col-lg-4 task-card"> 
   <div class="card">
-    <img class="card-img-top img-fluid" src="/img/essen.jpg" alt="Card image cap">
+    <img class="card-img-top img-fluid" src="{{getImagePath category}}" alt="Card image cap">
     <div class="card-block">
         <h3 class="text card-title">{{text}}</h3>
         <button class="btn btn-default delete">Delete</button> 
