--- a/pbm-app/imports/ui/task.html
+++ b/pbm-app/imports/ui/task.html
@@ -4,6 +4,7 @@
     <img class="card-img-top img-fluid" src="{{getImagePath category}}" alt="Card image cap">
     <div class="card-block">
         <h3 class="text card-title">{{text}}</h3>
+        <h6 class="card-subtitle text-muted">{{getFormattedTime duetime}}</h6>
         <button class="btn btn-default delete">Delete</button> 
     </div>
   </div>
